Complete FunQuiz3D project with 3D effects, timer, and sound

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="game-container">
     <h1>Welcome to FunQuiz 3D!</h1>
     <button id="start-btn">Start Quiz</button>
-    
+
     <!-- Quiz container initially hidden -->
     <div id="quiz-container" class="hidden">
       <div id="question-card">
@@ -23,7 +23,12 @@
       <div id="score-container">
         <p>Score: <span id="score">0</span></p>
       </div>
+      <div id="timer-container">
+        <p>Time Remaining: <span id="timer">30</span>s</p>
+      </div>
     </div>
+
+    <button id="restart-btn" class="hidden">Restart Quiz</button>
   </div>
   <script src="script.js"></script>
 </body>
