--- a/index.html
+++ b/index.html
@@ -4,32 +4,74 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FunQuiz 3D</title>
+  
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  
+  <!-- GSAP for animations -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/gsap.min.js"></script>
+  
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="game-container">
-    <h1>Welcome to FunQuiz 3D!</h1>
-    <button id="start-btn">Start Quiz</button>
 
-    <!-- Quiz container initially hidden -->
-    <div id="quiz-container" class="hidden">
-      <div id="question-card">
-        <p id="question-text"></p>
-        <button class="answer-btn">Answer 1</button>
-        <button class="answer-btn">Answer 2</button>
-        <button class="answer-btn">Answer 3</button>
-        <button class="answer-btn">Answer 4</button>
-      </div>
-      <div id="score-container">
-        <p>Score: <span id="score">0</span></p>
-      </div>
-      <div id="timer-container">
-        <p>Time Remaining: <span id="timer">30</span>s</p>
-      </div>
-    </div>
-
-    <button id="restart-btn" class="hidden">Restart Quiz</button>
+  <!-- Dark Mode Toggle Button -->
+  <div class="container d-flex justify-content-end pt-4">
+    <button id="darkModeToggle" class="btn btn-outline-light">Switch to Dark Mode</button>
   </div>
+
+  <!-- Login Form -->
+  <div id="login-form" class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
+    <div class="text-center p-5 rounded shadow-lg">
+      <h1 class="display-4 mb-4" id="login-title">Welcome to FunQuiz 3D!</h1>
+      <input type="text" id="username" class="form-control mb-3" placeholder="Enter your username" required>
+      <input type="password" id="password" class="form-control mb-3" placeholder="Enter your password" required>
+      <button id="login-btn" class="btn btn-lg btn-primary mb-3">Login</button>
+      <button id="signup-btn" class="btn btn-lg btn-secondary">Sign Up</button>
+    </div>
+  </div>
+
+  <!-- Sign Up Form -->
+  <div id="signup-form" class="container d-flex justify-content-center align-items-center" style="height: 100vh; display: none;">
+    <div class="text-center p-5 rounded shadow-lg">
+      <h1 class="display-4 mb-4">Sign Up</h1>
+      <input type="text" id="new-username" class="form-control mb-3" placeholder="Choose a username" required>
+      <input type="password" id="new-password" class="form-control mb-3" placeholder="Create a password" required>
+      <button id="signup-submit" class="btn btn-lg btn-primary mb-3">Sign Up</button>
+      <button id="back-to-login" class="btn btn-lg btn-secondary">Back to Login</button>
+    </div>
+  </div>
+
+  <!-- Game Screen (visible after login) -->
+  <div id="game-screen" class="container d-flex justify-content-center align-items-center" style="height: 100vh; display: none;">
+    <div class="text-center p-5 rounded shadow-lg bg-dark text-light">
+      <h1 class="display-4 mb-4">Welcome, <span id="user-welcome"></span>!</h1>
+      <button id="start-btn" class="btn btn-lg btn-success mb-4">Start Quiz</button>
+    </div>
+  </div>
+
+  <!-- Quiz Screen -->
+  <div id="quiz-screen" class="container d-flex justify-content-center align-items-center" style="height: 100vh; display: none;">
+    <div class="text-center p-5 rounded shadow-lg bg-dark text-light">
+      <div id="question-card" class="rounded p-4 shadow-lg">
+        <p id="question-text" class="fs-3 text-light"></p>
+        <div id="answer-buttons" class="d-grid gap-3">
+          <button class="answer-btn btn btn-primary btn-lg">Answer 1</button>
+          <button class="answer-btn btn btn-primary btn-lg">Answer 2</button>
+          <button class="answer-btn btn btn-primary btn-lg">Answer 3</button>
+          <button class="answer-btn btn btn-primary btn-lg">Answer 4</button>
+        </div>
+      </div>
+      <div id="score-container" class="mt-4">
+        <p class="fs-4 text-light">Score: <span id="score">0</span></p>
+      </div>
+      <div id="timer-container" class="mt-4">
+        <p class="fs-4 text-light">Time Remaining: <span id="timer">30</span>s</p>
+      </div>
+      <button id="next-btn" class="btn btn-lg btn-warning mt-4">Next Question</button>
+    </div>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
